@@ -65,6 +65,9 @@ Bug Fixes
 * LUCENE-6409: Fixed integer overflow in LongBitSet.ensureCapacity.
   (Luc Vanlerberghe via Adrien Grand)
 
+* LUCENE-6424: Fix many bugs with mockfs filesystems in the test-framework:
+  always consistently wrap Path, fix buggy behavior for globs, etc.  (Ryan Ernst)
+
 API Changes
 
 * LUCENE-6377: SearcherFactory#newSearcher now accepts the previous reader
